[package]
name = "rc3d"
version = "0.1.0"
authors = ["NGnius (Graham) <ngniusness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "^0.4"
#rocket_contrib = {version = "^0.4", features = []}
libfj = {version = "^0", features = ["simple", "robocraft"]}
obj = "^0.10"
genmesh = "^0.6"
cgmath = "^0.16"
serde_json = "1"
base64 = "0.13"
